@@ -1,176 +1,177 @@
 /* XPM */
-static char * ut2_xpm[] = {
-"16 16 157 2",
-"  	c None",
-". 	c #4E493E",
-"+ 	c #6A6354",
-"@ 	c #8C857A",
-"# 	c #9B9488",
-"$ 	c #8F887B",
-"% 	c #877F72",
-"& 	c #726A5D",
-"* 	c #5D574A",
-"= 	c #7D786D",
-"- 	c #C0AF8C",
-"; 	c #897F6C",
-"> 	c #91897D",
-", 	c #948C7F",
-"' 	c #867E72",
-") 	c #AA9F8C",
-"! 	c #7F6E50",
-"~ 	c #665F51",
-"{ 	c #A29C8F",
-"] 	c #EEDDBA",
-"^ 	c #CFB580",
-"/ 	c #91887A",
-"( 	c #81796D",
-"_ 	c #8C8272",
-": 	c #90897B",
-"< 	c #E1D3B7",
-"[ 	c #A38650",
-"} 	c #5F5546",
-"| 	c #625A4C",
-"1 	c #575145",
-"2 	c #A8A399",
-"3 	c #F0DDB7",
-"4 	c #F2DDB2",
-"5 	c #EDD3A0",
-"6 	c #A49065",
-"7 	c #554E41",
-"8 	c #685D48",
-"9 	c #E5D2AA",
-"0 	c #E5BF74",
-"a 	c #6C5B39",
-"b 	c #473F32",
-"c 	c #42392C",
-"d 	c #554E43",
-"e 	c #777267",
-"f 	c #C7B18A",
-"g 	c #765E34",
-"h 	c #C4AB7A",
-"i 	c #F0D7A4",
-"j 	c #A28957",
-"k 	c #3F372B",
-"l 	c #4C4336",
-"m 	c #EADBB8",
-"n 	c #EDCE8F",
-"o 	c #615235",
-"p 	c #3E3628",
-"q 	c #322A1D",
-"r 	c #423A2F",
-"s 	c #B6A68A",
-"t 	c #6B5A3C",
-"u 	c #6C6356",
-"v 	c #C2B293",
-"w 	c #EBCB8C",
-"x 	c #9C8048",
-"y 	c #362E21",
-"z 	c #4A4133",
-"A 	c #DCBF85",
-"B 	c #D3AD60",
-"C 	c #5B4B2D",
-"D 	c #2C2417",
-"E 	c #21190C",
-"F 	c #373126",
-"G 	c #746B58",
-"H 	c #756346",
-"I 	c #6F675A",
-"J 	c #635A4D",
-"K 	c #A59371",
-"L 	c #A37C2F",
-"M 	c #836226",
-"N 	c #30281C",
-"O 	c #4E4535",
-"P 	c #C6A25A",
-"Q 	c #B48833",
-"R 	c #4F3C1C",
-"S 	c #221A0D",
-"T 	c #160F04",
-"U 	c #3E3931",
-"V 	c #827660",
-"W 	c #5C5242",
-"X 	c #564D40",
-"Y 	c #4B4336",
-"Z 	c #A48E64",
-"` 	c #A57E30",
-" .	c #836022",
-"..	c #2D2519",
-"+.	c #423828",
-"@.	c #DAB56C",
-"#.	c #DCAE53",
-"$.	c #4F3D1D",
-"%.	c #221B10",
-"&.	c #171208",
-"*.	c #403B34",
-"=.	c #766F62",
-"-.	c #494134",
-";.	c #40382B",
-">.	c #3E3629",
-",.	c #99835A",
-"'.	c #9E7728",
-").	c #825F21",
-"!.	c #2C2519",
-"~.	c #473E2E",
-"{.	c #CCA659",
-"].	c #D5A647",
-"^.	c #473517",
-"/.	c #2D271F",
-"(.	c #534631",
-"_.	c #605A4E",
-":.	c #31291D",
-"<.	c #352D21",
-"[.	c #473F30",
-"}.	c #B19A6C",
-"|.	c #C99939",
-"1.	c #B28B3E",
-"2.	c #897857",
-"3.	c #C2AC80",
-"4.	c #D1A344",
-"5.	c #CFA042",
-"6.	c #B39353",
-"7.	c #8B7451",
-"8.	c #433C31",
-"9.	c #272013",
-"0.	c #3F3422",
-"a.	c #92733A",
-"b.	c #BE9036",
-"c.	c #CC9D3F",
-"d.	c #DAA948",
-"e.	c #9C701F",
-"f.	c #77581D",
-"g.	c #9E7628",
-"h.	c #785822",
-"i.	c #403C34",
-"j.	c #2F281E",
-"k.	c #231C10",
-"l.	c #302718",
-"m.	c #35250B",
-"n.	c #584017",
-"o.	c #835F21",
-"p.	c #2F220C",
-"q.	c #30291D",
-"r.	c #4F3F26",
-"s.	c #3E3B34",
-"t.	c #302B23",
-"u.	c #272117",
-"v.	c #241E13",
-"w.	c #241E14",
-"x.	c #27221B",
-"y.	c #35302A",
-"z.	c #4A4640",
-"                                ",
-"          . + @ # $ % & *       ",
-"        = - ; > , ' ' ) ! ~     ",
-"      { ] ^ / ( _ : < [ } | 1   ",
-"    2 3 4 5 6 7 8 9 0 a b c d   ",
-"  e f g h i j k l m n o p q r   ",
-"  s t u v w x y z A B C D E F   ",
-"G H I J K L M N O P Q R S T U   ",
-"V W X Y Z `  ...+.@.#.$.%.&.*.  ",
-"=.-.;.>.,.'.).!.~.{.].^./.(.    ",
-"_.:.<.[.}.|.1.2.3.4.5.6.7.      ",
-"  8.9.0.a.b.c.d.e.f.g.h.        ",
-"  i.j.k.l.m.n.o.p.q.r.          ",
-"    s.t.u.v.w.x.y.z.            ",
-"                                ",
-"                                "};
+static char *ut2_xpm[]={
+"16 16 158 2",
+"Qt c None",
+"aj c #000000",
+"#s c #160f04",
+"#H c #171208",
+"#d c #21190c",
+"#r c #221a0d",
+"#G c #221b10",
+"am c #231c10",
+"ax c #241e13",
+"ay c #241e14",
+"a# c #272013",
+"aw c #272117",
+"az c #27221b",
+"#c c #2c2417",
+"#Q c #2c2519",
+"#B c #2d2519",
+"#V c #2d271f",
+"ar c #2f220c",
+"al c #2f281e",
+"an c #302718",
+"#m c #30281c",
+"as c #30291d",
+"av c #302b23",
+"#Y c #31291d",
+".1 c #322a1d",
+"ao c #35250b",
+"#Z c #352d21",
+"aA c #35302a",
+".9 c #362e21",
+"#e c #373126",
+".0 c #3e3628",
+"#M c #3e3629",
+"#t c #3e3931",
+"au c #3e3b34",
+"aa c #3f3422",
+".V c #3f372b",
+"#L c #40382b",
+"#I c #403b34",
+"ak c #403c34",
+"#C c #423828",
+".N c #42392c",
+".2 c #423a2f",
+"a. c #433c31",
+"#U c #473517",
+"#R c #473e2e",
+"#0 c #473f30",
+".M c #473f32",
+"#K c #494134",
+"#. c #4a4133",
+"aB c #4a4640",
+"#x c #4b4336",
+".W c #4c4336",
+"#n c #4e4535",
+".# c #4e493e",
+"#q c #4f3c1c",
+"#F c #4f3d1d",
+"at c #4f3f26",
+"#W c #534631",
+".H c #554e41",
+".O c #554e43",
+"#w c #564d40",
+".B c #575145",
+"ap c #584017",
+"#b c #5b4b2d",
+"#v c #5c5242",
+".g c #5d574a",
+".z c #5f5546",
+"#X c #605a4e",
+".Z c #615235",
+".A c #625a4c",
+"#i c #635a4d",
+".p c #665f51",
+".I c #685d48",
+".a c #6a6354",
+".4 c #6b5a3c",
+".L c #6c5b39",
+".5 c #6c6356",
+"#h c #6f675a",
+".f c #726a5d",
+"#f c #746b58",
+"#g c #756346",
+".R c #765e34",
+"#J c #766f62",
+"ag c #77581d",
+".P c #777267",
+"ai c #785822",
+".h c #7d786d",
+".o c #7f6e50",
+".u c #81796d",
+"#P c #825f21",
+"#u c #827660",
+"aq c #835f21",
+"#A c #836022",
+"#l c #836226",
+".m c #867e72",
+".e c #877f72",
+"#4 c #897857",
+".j c #897f6c",
+"#9 c #8b7451",
+".v c #8c8272",
+".b c #8c857a",
+".d c #8f887b",
+".w c #90897b",
+".t c #91887a",
+".k c #91897d",
+"ab c #92733a",
+".l c #948c7f",
+"#N c #99835a",
+".c c #9b9488",
+"af c #9c701f",
+".8 c #9c8048",
+"ah c #9e7628",
+"#O c #9e7728",
+".U c #a28957",
+".q c #a29c8f",
+"#k c #a37c2f",
+".y c #a38650",
+"#y c #a48e64",
+".G c #a49065",
+"#z c #a57e30",
+"#j c #a59371",
+".C c #a8a399",
+".n c #aa9f8c",
+"#1 c #b19a6c",
+"#3 c #b28b3e",
+"#8 c #b39353",
+"#p c #b48833",
+".3 c #b6a68a",
+"ac c #be9036",
+".i c #c0af8c",
+"#5 c #c2ac80",
+".6 c #c2b293",
+".S c #c4ab7a",
+"#o c #c6a25a",
+".Q c #c7b18a",
+"#2 c #c99939",
+"ad c #cc9d3f",
+"#S c #cca659",
+"#7 c #cfa042",
+".s c #cfb580",
+"#6 c #d1a344",
+"#a c #d3ad60",
+"#T c #d5a647",
+"ae c #daa948",
+"#D c #dab56c",
+"#E c #dcae53",
+"## c #dcbf85",
+".x c #e1d3b7",
+".K c #e5bf74",
+".J c #e5d2aa",
+".X c #eadbb8",
+".7 c #ebcb8c",
+".Y c #edce8f",
+".F c #edd3a0",
+".r c #eeddba",
+".T c #f0d7a4",
+".D c #f0ddb7",
+".E c #f2ddb2",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQt.#.a.b.c.d.e.f.gQtQtQt",
+"QtQtQtQt.h.i.j.k.l.m.m.n.o.pQtQt",
+"QtQtQt.q.r.s.t.u.v.w.x.y.z.A.BQt",
+"QtQt.C.D.E.F.G.H.I.J.K.L.M.N.OQt",
+"Qt.P.Q.R.S.T.U.V.W.X.Y.Z.0.1.2Qt",
+"Qt.3.4.5.6.7.8.9#.###a#b#c#d#eQt",
+"#f#g#h#i#j#k#l#m#n#o#p#q#r#s#tQt",
+"#u#v#w#x#y#z#A#B#C#D#E#F#G#H#IQt",
+"#J#K#L#M#N#O#P#Q#R#S#T#U#V#WQtQt",
+"#X#Y#Z#0#1#2#3#4#5#6#7#8#9QtQtQt",
+"Qta.a#aaabacadaeafagahaiQtajajQt",
+"QtakalamanaoapaqarasatQtQtQtQtaj",
+"QtQtauavawaxayazaAaBQtQtQtQtajQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtajQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtajajaj"};
